--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                     <div class="imgbox1" data-aos="growb">
 
-                        <img src="boselogo.jpg.png" alt="" srcset="" class="img">
+                        <img src="/images/boselogo.jpg.png" alt="bose" class="img">
                     </div>
 
                 </div>
@@ -216,7 +216,7 @@
                         </div>
 
                     </div>
-                    <div class="imgb" data-aos="growb"><img src="helpearth.png" alt="" srcset="" class="img">
+                    <div class="imgb" data-aos="growb"><img src="/images/helpearth.png" alt="hearth" class="img">
                     </div>
 
                 </div>
@@ -254,7 +254,7 @@
                         </div>
 
                     </div>
-                    <div class="imgb" data-aos="growb"><img src="mountains.png" alt="" srcset="" class="img">
+                    <div class="imgb" data-aos="growb"><img src="/images/mountains.png" alt="spex" class="img">
                     </div>
                 </div>
 
@@ -297,7 +297,7 @@
                         </div>
 
                     </div>
-                    <div class="imgb" data-aos="growb"><img src="smokepins1.png" alt="" srcset="" class="img">
+                    <div class="imgb" data-aos="growb"><img src="/images/smokepins1.png" alt="smokey" class="img">
                     </div>
                 </div>
 
