--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div id="openInfo" class="b3">
                     <div class="imgbox2">
 
-                        <img src="/images/profile picture1.png" alt="" srcset="" class="profileimg">
+                        <img src="images/profile picture1.png" alt="" srcset="" class="profileimg">
                     </div>
                     <div class="infotextwrapper">
                         <div class="infotitle">Info</div>
@@ -176,7 +176,7 @@
 
                     <div class="imgbox1" data-aos="growb">
 
-                        <img src="/images/boselogo.jpg.png" alt="bose" class="img">
+                        <img src="images/boselogo.jpg.png" alt="bose" class="img">
                     </div>
 
                 </div>
@@ -216,7 +216,7 @@
                         </div>
 
                     </div>
-                    <div class="imgb" data-aos="growb"><img src="/images/helpearth.png" alt="hearth" class="img">
+                    <div class="imgb" data-aos="growb"><img src="images/helpearth.png" alt="hearth" class="img">
                     </div>
 
                 </div>
@@ -254,7 +254,7 @@
                         </div>
 
                     </div>
-                    <div class="imgb" data-aos="growb"><img src="/images/mountains.png" alt="spex" class="img">
+                    <div class="imgb" data-aos="growb"><img src="images/mountains.png" alt="spex" class="img">
                     </div>
                 </div>
 
@@ -297,7 +297,7 @@
                         </div>
 
                     </div>
-                    <div class="imgb" data-aos="growb"><img src="/images/smokepins1.png" alt="smokey" class="img">
+                    <div class="imgb" data-aos="growb"><img src="images/smokepins1.png" alt="smokey" class="img">
                     </div>
                 </div>
 
