--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                         </div>
 
                     </div>
-                    <div class="imgb" data-aos="growb"><img src="images/Smokepins1.png" alt="smokey" class="img">
+                    <div class="imgb" data-aos="growb"><img src="images/smokepins.png" alt="smokey" class="img">
                     </div>
                 </div>
 
